fix(ui5-popover): fix arrow position in RTL direction
When the popover is inside iFrame in RTL direction and
 there is a scrollbar (in left) - the position of the popover
(and its arrow) should be adjusted (moved to left
 with the size of the scrollbar).

fixes: #9966

--- a/packages/main/test/pages/styles/Popover.css
+++ b/packages/main/test/pages/styles/Popover.css
@@ -92,3 +92,11 @@ ui5-date-picker,
 #divOpenAndScroll > div {
     height: 2000px;
 }
+
+.centered-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
